[package]
name = "dppr"
version = "0.1.0"
edition = "2024"
description = "DDP server software. Runs in the background, use the provided CLI to interact"

[dependencies]
axum = { version = "0.8.4", features = ["json"] }
mime_guess = "2.0.5"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version =  "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.19",features = ["registry"]}
tokio-util = { version = "0.7.16", features = ["io"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"]}
tracing = "0.1.41"
toml = "0.9.5"

